--- a/multi-step-form/src/App.css
+++ b/multi-step-form/src/App.css
@@ -2,17 +2,97 @@
 @tailwind components;
 @tailwind utilities;
 
-.step-section, .form-section{
-    height: 34rem;
-}
-.step-section button{
+
+.step-section button, .mobile-btn button{
     border-color: 1px solid white;
     height: 2.5rem;
     width: 2.5rem;
 }
+.form-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
 /*.step-section button{
     background-color:  hsl(206, 94%, 87%);
     height: 2.5rem;
     width: 2.5rem;
     border-radius: 50%;
 }*/
+@media only screen
+  and (min-width: 641px) {
+    .step-section {
+      background-image: url("/bg-sidebar-desktop.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 35rem;
+    }
+
+    .button{
+        display: flex;
+        align-items: center;
+        min-width: 10rem;
+        margin: auto;
+     }
+     .button p{
+        margin-top: 1.5rem;
+     }
+}
+@media only screen
+  and (max-width: 640px) {
+   
+    main{
+        width: 100%;
+    }
+    .step-section {
+      background-image: url("/bg-sidebar-mobile.svg");
+      background-size: cover;
+      max-height: 15rem;
+    }
+    .form-section{
+        background-color: #fff;
+        width: 22rem;
+        margin: auto;
+        top: -6rem;
+        position: relative;
+        height: 28rem;
+    }
+    .step-section button{
+        margin-bottom: 5rem;
+        margin-left: 1rem;
+    }
+    input{
+        width: 20rem;
+    }
+   .step-section{
+    justify-content: center;
+   }
+    .button button{
+      position: absolute;
+      right: 3rem;
+      bottom: 1rem;
+      width: 6.5rem;
+     }
+     .button p{
+        position: absolute;
+        bottom: 2rem;
+     }
+     .mobile-btn{
+        background: white;
+        align-items: center;
+        height: 7rem;
+        
+     }
+     .mobile-btn button{
+        padding: .6rem 1rem;
+        color: #fff;
+        background-color:  hsl(213, 96%, 18%);
+        width: 6.5rem;
+        margin-right: 4.5rem;
+     }
+     .mobile-btn p{
+        color: hsl(231, 11%, 63%);
+        font-weight: 500;
+        margin-left: 4.5rem;
+     }
+}
