--- a/multi-step-form/src/App.css
+++ b/multi-step-form/src/App.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .step-section button, .mobile-btn button{
     border-color: 1px solid white;
     height: 2.5rem;
@@ -13,14 +12,60 @@
     align-items: center;
     justify-content: center;
  }
- h1, label, .info h3{
+ h1, label, .info h3, .plan-btn{
   color: hsl(213, 96%, 18%);
 }
-.plan{
-  font-size: 1.7rem;
+.switch{
+  position: relative;
+  display: inline-block;
+  width: 55px;
+  height: 27px;
 }
-.plan-p{
-  font-size: 1.1rem;
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider{
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: hsl(213, 96%, 18%);
+  transition: 0.4s;
+}
+.slider:before{
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  border-radius: 50%;
+  transition: 0.4s;
+}
+input:checked + .slider:before{
+  transform: translateX(26px);
+}
+.slider{
+  border-radius: 1rem;
+}
+.plan-btn{
+  font-size: .85rem;
+  font-weight: 600;
+  align-items: center;
+  margin-left: 10rem;
+}
+.add{
+  font-size: 1.55rem;
+}
+.free{
+  color:hsl(213, 96%, 18%);
+  font-weight: 500;
+  font-size: .7rem;
 }
 /*.step-section button{
     background-color:  hsl(206, 94%, 87%);
@@ -45,12 +90,55 @@
      .button p{
         margin-top: 1.5rem;
      }
-}
+     .plan-btn{
+      background-color: #F3F4F6;
+      width: 32.5rem;
+      margin: auto;
+      padding-right: 8rem;
+      padding-left: 10rem;
+      padding-top: .5rem;
+      padding-bottom: .5rem;
+     }
+     .desktop-btn{
+        display: flex;
+        background: white;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem;
+    }
+   .desktop-btn button{
+      padding: .6rem 1rem;
+      color: #fff;
+      background-color:  hsl(213, 96%, 18%);
+      width: 6.5rem;
+      margin-left: 21rem;
+   }
+   .desktop-btn p{
+      color: hsl(231, 11%, 63%);
+      font-weight: 500;
+      right: -3rem;
+   }
+   .p-div{
+    width: 10rem;
+    font-size: .7rem;
+   }
+   .add-p{
+    color: #944dff;
+    margin-left: 15rem;
+   }
+  }
 @media only screen
   and (max-width: 640px) {
-   
+   .add-p{
+    margin-left: 5rem;
+   }
     main{
         width: 100%;
+    }.plan{
+      font-size: 1.7rem;
+    }
+    .plan-p{
+      font-size: 1.1rem;
     }
     .p-div p{
       margin-top: .3rem;
@@ -66,7 +154,7 @@
         margin: auto;
         top: -4rem;
         position: relative;
-        height: 28rem;
+        height: 35rem;
     }
     .step-section button{
         margin-bottom: 5rem;
@@ -88,22 +176,41 @@
         position: absolute;
         bottom: 2rem;
      }
-     .mobile-btn{
+     .mobile{
         background: white;
         align-items: center;
-        height: 7rem;
-        
+        justify-content: space-around;
+        height: 7rem; 
+       margin: auto;
      }
-     .mobile-btn button{
+     .mobile button{
         padding: .6rem 1rem;
         color: #fff;
-        background-color:  hsl(213, 96%, 18%);
-        width: 6.5rem;
-        margin-right: 4.5rem;
+        background-color: hsl(213, 96%, 18%);
+        margin-right: 4rem;
      }
-     .mobile-btn p{
+     .mobile p{
         color: hsl(231, 11%, 63%);
         font-weight: 500;
-        margin-left: 4.5rem;
+        margin-left: 4rem;
+     }
+     .plan-btn{
+      background-color: #F3F4F6;
+      width: 19.5rem;
+      margin: auto;
+      padding-right: 8rem;
+      padding-left: 4rem;
+      padding-top: .5rem;
+      padding-bottom: .5rem;
+     }
+     .p-div{
+      width: 8.5rem;
+      font-size: .65rem;
+     }
+     .p-div p{
+  
+     }
+     .add-p{
+      color: #944dff;
      }
 }
