--- a/multi-step-form/src/App.css
+++ b/multi-step-form/src/App.css
@@ -74,7 +74,7 @@ input:checked + .slider:before{
   accent-color: #6600ff;
 }
 .info{
-  background-color: #F3F4F6;
+  height: 19rem;
 }
 .line{
   height: .01rem;
@@ -95,6 +95,15 @@ input:checked + .slider:before{
       background-repeat: no-repeat;
       background-size: cover;
       height: auto;
+    }
+    .plan{
+      font-size: 1.7rem;
+    }
+    .thank{
+      width: 30rem;
+      height: 32rem;
+      position: relative;
+      top: 5rem;
     }
     .button{
         display: flex;
