--- a/multi-step-form/src/App.css
+++ b/multi-step-form/src/App.css
@@ -2,13 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-.step-section button, .mobile-btn button{
+.mobile-btn button{
     border-color: 1px solid white;
     height: 2.5rem;
     width: 2.5rem;
 }
+.step-section button {
+  margin-right: 1rem;
+}
+.unhighlighted{
+  border-color: 1px solid white;
+  height: 2.5rem;
+  width: 2.5rem;
+}
+.highlighted{
+  background-color: hsl(206, 94%, 87%);
+  color: black;
+}
 #fin-p{
   color: hsl(213, 96%, 18%);
+}
+.total{
+  margin-bottom: 1.5rem;
 }
 .form-button{
     display: flex;
@@ -79,8 +94,13 @@ input:checked + .slider:before{
 .line{
   height: .01rem;
 }
-#next{
+.confirm{
   background-color:  #6600ff;
+  padding: .6rem 1rem;
+  color: #fff;
+  width: 6.5rem;
+  margin-left: 21rem;
+  border-radius: .5rem;
 }
 .span{
   display: block;
@@ -107,7 +127,7 @@ input:checked + .slider:before{
     }
     .thank{
       width: 30rem;
-      height: 32rem;
+      height: 30rem;
       position: relative;
       top: 5rem;
     }
@@ -124,10 +144,11 @@ input:checked + .slider:before{
       background-color: #F3F4F6;
       width: 32.5rem;
       margin: auto;
+      margin-bottom: 1rem;
       padding-right: 8rem;
       padding-left: 10rem;
-      padding-top: .5rem;
-      padding-bottom: .5rem;
+      padding-bottom: 1rem;
+      padding-top: 1rem;
      }
      .desktop-btn{
         display: flex;
